[gd_scene load_steps=60 format=3 uid="uid://cbtmbxl32arhh"]

[ext_resource type="Script" path="res://code/enemies/mummy_boss.gd" id="1_vjftj"]
[ext_resource type="Texture2D" uid="uid://bd1237hh3k7gp" path="res://art/mummyboss.png" id="2_0cwiv"]
[ext_resource type="PackedScene" uid="uid://cqlmw13hexw1a" path="res://scenes/state_machine/state_machine.tscn" id="3_uner7"]
[ext_resource type="Script" path="res://code/state_machine/enemy_state_machine.gd" id="4_8yxik"]
[ext_resource type="Script" path="res://code/state_machine/states/boss_states/boss_cool_down.gd" id="5_tn8h1"]
[ext_resource type="Script" path="res://scenes/enemies/mummy_boss_transitions.gd" id="5_v162g"]
[ext_resource type="Script" path="res://code/state_machine/states/boss_states/Shoot.gd" id="6_e01rw"]
[ext_resource type="Script" path="res://code/state_machine/states/boss_states/Stomp.gd" id="7_6yjqs"]
[ext_resource type="Texture2D" uid="uid://bfgq5tb5ye6an" path="res://art/exclamation_spritesheet_01.png" id="9_2drlj"]
[ext_resource type="PackedScene" uid="uid://vr6ikbrw81ea" path="res://damage_hitbox.tscn" id="10_oymc0"]
[ext_resource type="Script" path="res://code/util/DamageHurtbox.gd" id="11_jggt7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hbhuj"]
atlas = ExtResource("2_0cwiv")
region = Rect2(672, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrdla"]
atlas = ExtResource("2_0cwiv")
region = Rect2(784, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oogyk"]
atlas = ExtResource("2_0cwiv")
region = Rect2(896, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_542b6"]
atlas = ExtResource("2_0cwiv")
region = Rect2(896, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bd75"]
atlas = ExtResource("2_0cwiv")
region = Rect2(784, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdmu0"]
atlas = ExtResource("2_0cwiv")
region = Rect2(672, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i48fx"]
atlas = ExtResource("2_0cwiv")
region = Rect2(672, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kouba"]
atlas = ExtResource("2_0cwiv")
region = Rect2(560, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_grc8k"]
atlas = ExtResource("2_0cwiv")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncaif"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1008, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmhen"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1120, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdqrk"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1232, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0po4"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1344, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tjds"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1456, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_asqoe"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1568, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7prgl"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1680, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iearu"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1680, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6aq1s"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1568, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_voij0"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1456, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvgwp"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1344, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihdbi"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1232, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff2re"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1120, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn64l"]
atlas = ExtResource("2_0cwiv")
region = Rect2(1008, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpdo8"]
atlas = ExtResource("2_0cwiv")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jslp3"]
atlas = ExtResource("2_0cwiv")
region = Rect2(560, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhv3e"]
atlas = ExtResource("2_0cwiv")
region = Rect2(672, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3awtr"]
atlas = ExtResource("2_0cwiv")
region = Rect2(896, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h6dv"]
atlas = ExtResource("2_0cwiv")
region = Rect2(784, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5fbm"]
atlas = ExtResource("2_0cwiv")
region = Rect2(672, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3we5"]
atlas = ExtResource("2_0cwiv")
region = Rect2(560, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_74vlu"]
atlas = ExtResource("2_0cwiv")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_du5hg"]
atlas = ExtResource("2_0cwiv")
region = Rect2(336, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1god"]
atlas = ExtResource("2_0cwiv")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfs51"]
atlas = ExtResource("2_0cwiv")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_o27q0"]
atlas = ExtResource("2_0cwiv")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vifk"]
atlas = ExtResource("2_0cwiv")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vfyj"]
atlas = ExtResource("2_0cwiv")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b87br"]
atlas = ExtResource("2_0cwiv")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b22u5"]
atlas = ExtResource("2_0cwiv")
region = Rect2(336, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ic42"]
atlas = ExtResource("2_0cwiv")
region = Rect2(448, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rb3j"]
atlas = ExtResource("2_0cwiv")
region = Rect2(560, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r70v2"]
atlas = ExtResource("2_0cwiv")
region = Rect2(672, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc4e3"]
atlas = ExtResource("2_0cwiv")
region = Rect2(784, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvqn6"]
atlas = ExtResource("2_0cwiv")
region = Rect2(896, 0, 112, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_8m767"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbhuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrdla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oogyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_542b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bd75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdmu0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i48fx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kouba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grc8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncaif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmhen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdqrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0po4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tjds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asqoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7prgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iearu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aq1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voij0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvgwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihdbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff2re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn64l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpdo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jslp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhv3e")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3awtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h6dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5fbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3we5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74vlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du5hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1god")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfs51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o27q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vifk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vfyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b87br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b22u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ic42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rb3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r70v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvqn6")
}],
"loop": true,
"name": &"stomp",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7fbrp"]
atlas = ExtResource("9_2drlj")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_olfnt"]
atlas = ExtResource("9_2drlj")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qjxnv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fbrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olfnt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MummyBoss" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
script = ExtResource("1_vjftj")
current_health = 20

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8m767")
animation = &"stomp"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-3, 3)
polygon = PackedVector2Array(-10, 28, -15, 30, -25, 30, -30, 28, -19, 3, -19, -1, -29, -4, -27, -20, -13, -30, -5, -30, -5, -33, 2, -40, 9, -40, 10, -38, 15, -39, 18, -39, 16, -35, 13, -35, 16, -32, 16, -29, 14, -27, 27, -18, 27, -11, 20, -3, 19, 22, 35, 26, 35, 30, 14, 30, 8, 30, 2, 28, 7, 22, 4, 4, -1, 4, -4, 12, -11, 19)

[node name="StateMachine" parent="." instance=ExtResource("3_uner7")]
script = ExtResource("4_8yxik")

[node name="States" type="Node" parent="StateMachine"]

[node name="CoolDown" type="Node" parent="StateMachine/States"]
script = ExtResource("5_tn8h1")

[node name="Shoot" type="Node" parent="StateMachine/States"]
script = ExtResource("6_e01rw")

[node name="Stomp" type="Node" parent="StateMachine/States"]
script = ExtResource("7_6yjqs")

[node name="Transitions" type="Node" parent="StateMachine"]
script = ExtResource("5_v162g")

[node name="Timers" type="Node" parent="."]

[node name="WanderTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ExclamationTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ExclamationSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -45)
sprite_frames = SubResource("SpriteFrames_qjxnv")
frame_progress = 0.745975

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="DamageHitbox" parent="." groups=["enemy_attack"] instance=ExtResource("10_oymc0")]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" parent="DamageHitbox" index="0"]
position = Vector2(0, 2.5)
shape = null

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DamageHitbox"]
polygon = PackedVector2Array(1, 7, 4, 25, -1, 31, 5, 33, 32, 33, 32, 29, 16, 25, 16, 0, 24, -8, 24, -16, 11, -24, 13, -27, 13, -30, 6, -37, -1, -37, -8, -30, -8, -27, -17, -27, -30, -16, -32, -1, -22, 2, -22, 5, -33, 31, -28, 33, -19, 33, -13, 31, -14, 22, -8, 16, -4, 7)

[node name="DamageHurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource("11_jggt7")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="DamageHurtbox"]
polygon = PackedVector2Array(1, 7, 4, 25, -1, 31, 5, 33, 32, 33, 32, 29, 16, 25, 16, 0, 24, -8, 24, -16, 11, -24, 13, -27, 13, -30, 6, -37, -1, -37, -8, -30, -8, -27, -17, -27, -30, -16, -32, -1, -22, 2, -22, 5, -33, 31, -28, 33, -19, 33, -13, 31, -14, 22, -8, 16, -4, 7)

[connection signal="timeout" from="Timers/WanderTimer" to="StateMachine/States/CoolDown" method="_on_wander_timer_timeout"]
[connection signal="timeout" from="Timers/ExclamationTimer" to="StateMachine/States/Shoot" method="_on_exclamation_timer_timeout"]
[connection signal="damage_received" from="DamageHurtbox" to="." method="_on_damage_hurtbox_damage_received"]

[editable path="DamageHitbox"]
